** Emacs mode no longer depends on Bigloo UDE
** Guile warnings about duplicate bindings are now hidden

These harmless warnings looked like:

  WARNING: (skribilo ast): imported module (srfi srfi-34) overrides core binding `raise'

** The `slide' package supports additional customs

Namely, `slide-outline-title' and
`slide-outline-{active,inactive}-color'.  See manual for details.


* New in Skribilo 0.9.0 (user-visible changes compared to Skribe 1.2d)

** New engine: `lout' (see http://lout.sf.net/).

** New packages

  - `eq' for equation formatting.
  - `pie' for pie charts.
  - `diff' for document diff (experimental).
  - `web-book2' for on-line publishing.

** New markups in the `base' package

  `~', `breakable-space', `numref', `!lout', `lout-illustration'.

** Extended markups in the `base' package

   - `footnote' now takes a `:label' option.
   - `document' now takes a `:keywords' option.	
   - `bibliography' now takes a `:labels' option.

** New `outline' front-end (see the `--reader' option of `skribilo')

** New module system (actually that of GNU Guile), no `skribe-load'

  Just like modules help structure programs, they are useful for
  documents: Skribilo documents are not second-class programs.  Also,
  by default, Skribilo documents have fewer bindings in their name
  space than Skribe documents.

  For compatibility with Skribe, see the `--compat=skribe'
  command-line option.

** Little or no global state

  Per-document data structures (e.g., per-document node identifier
  hash table) or SRFI-39 parameters (e.g., `*document-path*') are used
  where appropriate, which introduces API changes.

  Use `--compat=skribe' for compatibility with Skribe.

** Stricter document structure

  In Skribe, if the engine allowed it, it was possible to use
  `section' instead of `chapter' as the top-level section type.  The
  `latex' engine, consequently, has a new custom named
  `class-has-chapters?'.

** Unique node identifiers
