@@ -25,6 +25,8 @@ These harmless warnings looked like:
 Namely, `slide-outline-title' and
 `slide-outline-{active,inactive}-color'.  See manual for details.
 
+** The `:toc' option of `slide' determines whether to include it in the outline
+
 
 * New in Skribilo 0.9.0 (user-visible changes compared to Skribe 1.2d)
 
